--- a/ca4/public/css/demo.css
+++ b/ca4/public/css/demo.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+
 * {
     box-sizing: border-box;
   }
@@ -48,3 +50,41 @@
     margin-left: 200px;
     padding-left: 20px;
   }
+
+  p {
+    font-family: 'Lato', sans-serif;
+    letter-spacing: 0.2em;
+    text-align: center;
+  }
+
+.navbar-nav {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+}
+
+  h1 {
+    padding-top: 3%;
+    padding-bottom: 5%;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    text-align: center;
+  }
+
+  .borders {
+    border: 5px solid #89cff0;
+    border-radius: 25px;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 10%;
+    padding-bottom: 10%;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    letter-spacing: 0.2em;
+    text-align: center;
+  }
+
+.col {
+  text-align: center;
+  padding-top: 100px;
+}
